--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,7 @@
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
     ],
-    "rules": {}
+    "rules": {
+        "@typescript-eslint/no-var-requires": 0
+    }
 }
