--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react-dom": "^18.0.0",
+        "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.17.8",
