--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@hookform/resolvers": "^2.8.8",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
+        "joi": "^17.6.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-router-dom": "^6.3.0"
+        "react-hook-form": "^7.29.0",
+        "react-router-dom": "^6.3.0",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@babel/core": "^7.17.8",
