Se implemento el uso de paypal y un mapa

--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "license": "ISC",
     "dependencies": {
         "@hookform/resolvers": "^2.8.8",
+        "@paypal/paypal-js": "^5.0.4",
+        "@paypal/react-paypal-js": "^7.6.0",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
+        "axios": "^0.26.1",
+        "dotenv-webpack": "^7.1.0",
         "joi": "^17.6.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-hook-form": "^7.29.0",
+        "react-leaflet": "^3.2.5",
+        "react-paypal-button-v2": "^2.6.3",
         "react-router-dom": "^6.3.0",
         "yup": "^0.32.11"
     },
@@ -28,6 +34,7 @@
         "@babel/core": "^7.17.8",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
+        "@types/leaflet": "^1.7.9",
         "@typescript-eslint/eslint-plugin": "^5.18.0",
         "@typescript-eslint/parser": "^5.18.0",
         "babel-loader": "^8.2.4",
